[tool.poetry]
name = "notes"
version = "0.1.0"
description = "Notes on various subjects"
authors = ["Fang Yi Liu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.17"
mkdocs-multirepo-plugin = "0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
